--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    }
 </style>
 <body style="background-color:black;">
-<img src="mypic.jpg" alt="me" style="margin-right:12%;border-radius:10px;float:right;" width="210" height="280">
+<img src="fodse keerthana (1).jpg" alt="me" style="margin-right:12%;border-radius:10px;float:right;" width="210" height="280">
 <p class="name">Keerthana D</p>
 
 
